--- a/lib/css/styles.css
+++ b/lib/css/styles.css
@@ -1,5 +1,4 @@
 div#selectorgadget_main {
-  azimuth: center !important;
   background-attachment: scroll !important;
   background-image: none !important;
   background-position: 0% 0% !important;
@@ -50,15 +49,16 @@ div#selectorgadget_main {
   vertical-align: baseline !important;
   visibility: visible !important;
   white-space: normal !important;
-  widows: 2 !important;
-  width: auto !important;
+  width: 90% !important;
   word-spacing: normal !important;
   position: fixed !important;
   z-index: 9999999 !important;
   display: block !important;
-  right: 5px !important;
-  margin: 5px !important;
+  right: 0px !important;
+  left: 5% !important;
+  margin-bottom: 5px !important;
   padding: 5px !important;
+  padding-top: 5px !important;
   font-size: 14px !important;
   float: none !important;
   border: 1px solid black !important;
@@ -80,8 +80,6 @@ div#selectorgadget_main *, .selectorgadget_clean, .selectorgadget_clean * {
   clip: auto;
   color: black;
   content: normal;
-  counter-increment: none;
-  counter-reset: none;
   cursor: auto;
   direction: ltr;
   elevation: level;
@@ -89,7 +87,6 @@ div#selectorgadget_main *, .selectorgadget_clean, .selectorgadget_clean * {
   font-family: sans-serif;
   font-variant: normal;
   font-weight: normal;
-  height: auto;
   left: auto;
   letter-spacing: normal;
   line-height: normal;
@@ -208,7 +205,7 @@ img.selectorgadget_selected {
   border: 5px solid #0F0 !important; }
 
 #selectorgadget_main.selectorgadget_top {
-  top: 5px !important; }
+  bottom: 0px !important; }
 
 #selectorgadget_main.selectorgadget_bottom {
   bottom: 5px !important; }
